--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/hooks": "^2.8.0",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-gesture-handler": "^1.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0"
   },
