--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.66.1",
     "react-native-gesture-handler": "^1.4.0",
     "react-native-svg": "^12.1.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
