permission package adds and storage permission use in Imnage picker

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.66.1",
     "react-native-gesture-handler": "^1.4.0",
     "react-native-image-picker": "^4.1.2",
+    "react-native-permissions": "^3.1.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "yup": "^0.32.11"
