--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^2.8.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-gesture-handler": "^1.4.0",
     "react-native-image-picker": "^4.1.2",
     "react-native-permissions": "^3.1.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "yup": "^0.32.11"
