--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^2.8.0",
+    "@react-native-community/netinfo": "^6.0.5",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "apisauce": "^2.1.2",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.1",
